--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,18 @@ dependencies:
   native_pdf_view: 3.8.0
   flutter_splash_screen: 0.1.0
   percent_indicator: 2.1.8
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.8.0"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "E:/college/work/gulfgoal/icons/GULF GOAL APP ICON-01.png"
+ 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
